refactor(code): upgrade deps and clean unused code
