# src/handlers/files/files_index.rs
@@ -1,12 +1,10 @@
 use crate::handlers::tasks::task_manager::ThreadManager;
 use crate::models::file::repository::{FileSchema, Image};
-use crate::{AppConfig, Context, DbConn};
+use crate::{AppConfig, DbConn};
 use image::ImageReader;
-use rocket::State;
-use rocket::request::FlashMessage;
-use rocket::serde::Serialize;
 use rocket::serde::json::Json;
-use rocket_dyn_templates::Template;
+use rocket::serde::Serialize;
+use rocket::State;
 use sha2::{Digest, Sha256};
 use std::collections::HashSet;
 use std::fs::File;
@@ -238,45 +236,6 @@ struct ImageInfo {
     folder_name: String,
     w: u32,
     h: u32,
-}
-
-#[get("/tags?<tag>")]
-pub async fn get_files_by_tag(
-    flash: Option<FlashMessage<'_>>,
-    conn: DbConn,
-    tag: &str,
-) -> Template {
-    let flash = flash.map(FlashMessage::into_inner);
-
-    Template::render(
-        "files",
-        Context::random(&conn, flash, &500, None, None, Some(tag), None, &false, &0).await,
-    )
-}
-
-#[get("/type?<extension>")]
-pub async fn get_files_by_extension(
-    flash: Option<FlashMessage<'_>>,
-    conn: DbConn,
-    extension: &str,
-) -> Template {
-    let flash = flash.map(FlashMessage::into_inner);
-
-    Template::render(
-        "files",
-        Context::random(
-            &conn,
-            flash,
-            &500,
-            None,
-            None,
-            None,
-            Some(extension),
-            &false,
-            &0,
-        )
-        .await,
-    )
 }
 
 #[derive(Serialize)]
