# static/openapi.json
@@ -35,11 +35,17 @@
               }
             }
           }
-        }
+        },
+        "tags": [
+          "root"
+        ]
       }
     },
     "/folders/json": {
       "get": {
+        "tags": [
+          "folder"
+        ],
         "summary": "Get all folders",
         "description": "Returns a paginated list of all folders, with optional filtering by root folder and search term",
         "operationId": "getAllFolders",
@@ -98,6 +104,9 @@
     },
     "/folders/json/name/{folderName}": {
       "get": {
+        "tags": [
+          "folder"
+        ],
         "summary": "Get folder by name",
         "description": "Returns details of a specific folder by its name",
         "operationId": "getFolderByName",
@@ -131,6 +140,9 @@
     },
     "/folders/delete": {
       "post": {
+        "tags": [
+          "folder"
+        ],
         "summary": "Delete a folder",
         "description": "Deletes a folder and returns the number of affected rows",
         "operationId": "deleteFolder",
@@ -146,7 +158,9 @@
                     "description": "Name of the folder to delete"
                   }
                 },
-                "required": ["data"]
+                "required": [
+                  "data"
+                ]
               }
             }
           }
@@ -173,6 +187,9 @@
     },
     "/tags/assign/folder": {
       "post": {
+        "tags": [
+          "tag"
+        ],
         "summary": "Update folder tags",
         "description": "Updates the tags associated with a folder",
         "operationId": "updateFolderTags",
@@ -195,7 +212,10 @@
                     "description": "Name of the folder"
                   }
                 },
-                "required": ["tags", "folder_name"]
+                "required": [
+                  "tags",
+                  "folder_name"
+                ]
               }
             }
           }
@@ -224,6 +244,9 @@
     },
     "/files/json": {
       "get": {
+        "tags": [
+          "files"
+        ],
         "summary": "Get photos by folder",
         "description": "Returns a paginated list of photos within a specified folder",
         "operationId": "getPhotosByFolder",
@@ -272,6 +295,9 @@
     },
     "/files/random/json": {
       "get": {
+        "tags": [
+          "files"
+        ],
         "summary": "Get random photos from a folder",
         "description": "Returns a random selection of photos from a specified folder",
         "operationId": "getRandomPhotos",
@@ -311,6 +337,9 @@
     },
     "/tags/assign": {
       "post": {
+        "tags": [
+          "tag"
+        ],
         "summary": "Update photo tags",
         "description": "Updates the tags associated with a specific photo",
         "operationId": "updatePhotoTags",
@@ -333,7 +362,10 @@
                     "description": "Hash of the image"
                   }
                 },
-                "required": ["tags", "image_hash"]
+                "required": [
+                  "tags",
+                  "image_hash"
+                ]
               }
             }
           }
@@ -362,6 +394,9 @@
     },
     "/tags": {
       "get": {
+        "tags": [
+          "tag"
+        ],
         "summary": "Get all tags",
         "description": "Returns a list of all tags, optionally filtered by folder",
         "operationId": "getAllTags",
@@ -394,6 +429,9 @@
     },
     "/files/task/index": {
       "get": {
+        "tags": [
+          "task"
+        ],
         "summary": "Trigger all photos indexation",
         "description": "Initiates the indexing process for all photos, with an option to force reindexing",
         "operationId": "indexPhotos",
@@ -429,6 +467,9 @@
     },
     "/files/task/cancel": {
       "get": {
+        "tags": [
+          "task"
+        ],
         "summary": "Cancel the indexation task",
         "description": "Cancels any ongoing photo indexation task",
         "operationId": "cancelIndexTask",
